--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<h1>Patricia Andreica</h1>
 
-Welcome to your new app.
+This is my new app.
 
 <SurveyPrompt Title="How is Blazor working for you?" />
