--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -1,4 +1,6 @@
-﻿@page "/"
+// Patricia Andreica
+// https://devblogs.microsoft.com/aspnet/azure-static-web-apps-with-blazor/
+@page "/"
 
 <h1>Patricia Andreica</h1>
 
