--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -1,9 +1,9 @@
-// Patricia Andreica
-// https://devblogs.microsoft.com/aspnet/azure-static-web-apps-with-blazor/
+
 @page "/"
 
 <h1>Patricia Andreica</h1>
 
-This is my new app.
+<h2>About Me</h2>
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+<p>This is my new app</p>
+
