--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -3,7 +3,9 @@
 
 <h1>Patricia Andreica</h1>
 
-<h2>About Me</h2>
 
-<p>This is my new app</p>
 
+<h3>About Me</h3>
+
+
+<<p> Hello, my name is Patricia and I am a software engineering student at Florida Gulf Coast University</p>
