updated the tags

--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -1,8 +1,10 @@
 
 @page "/"
 
-<h1>Patricia Andreica</h1>
+<center>
+    <h1>Patricia Andreica</h1>
 
-<h3>About Me</h3>
+    <h3>About Me</h3>
 
-<p> Hello, my name is Patricia and I am a software engineering student at Florida Gulf Coast University</p>
+    <p> Hello, my name is Patricia and I am a software engineering student at Florida Gulf Coast University</p>
+</center>
