--- a/Client/wwwroot/css/app.css
+++ b/Client/wwwroot/css/app.css
@@ -1,7 +1,7 @@
 ﻿@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
 
 html, body {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: 'Cormorant SC', serif;
 }
 
 a, .btn-link {
@@ -9,8 +9,8 @@ a, .btn-link {
 }
 
 .btn-primary {
-    color: #fff;
-    background-color: #1b6ec2;
+    color: #000000;
+    background-color: #F5F5DC;
     border-color: #1861ac;
 }
 
@@ -47,7 +47,7 @@ app {
 }
 
 .sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+    background-image: linear-gradient(180deg, rgb(158, 150, 128) 0%, #d4cfc3 70%);
 }
 
     .sidebar .top-row {
