--- a/Client/Shared/NavMenu.razor
+++ b/Client/Shared/NavMenu.razor
@@ -19,17 +19,17 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+                <span class="oi oi-cloud" aria-hidden="true"></span> Fetch data
             </NavLink>
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="ipo">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> IPO
+                <span class="oi oi-command" aria-hidden="true"></span> IPO
             </NavLink>
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="todo">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Todo
+                <span class="oi oi-check" aria-hidden="true"></span> Todo
             </NavLink>
         </li>
 
